src/group-view.css
/**
 * Color Palette 
 * SublimeText users: get Color Highlighter to see these inline
 *
 * users: #60BADF
 * prefer: #6AD5A2
 * avoid: #F39354;
 * background: #4C5365;
 * background (active): #6E7891;
 * greyed out text: #A9A9A9;
 * shadow for drag: #939085
 * input-field active: #f9efec
 * hover background: #FED587;
 * hover text: #F39354
 *
 * used colors for other things:
 * #DFB0EA
 * #818AAA
 *
 */

html, body, body > svg, body > div {
 position: fixed;
 margin:0; padding:0; height:100%; width:100%; overflow:hidden;
 font: 28px;
 font-family: 'Raleway';
}

body > div {
  pointer-events: none;
}

svg circle, svg g text {
  cursor: move;
  cursor: -webkit-grab;
}

svg g.node text {
 fill: white;
 font-family: Raleway;
 -webkit-user-select: none;
 -moz-user-select: none;
 -ms-user-select: none;
 user-select: none;
}

svg g.node circle {
 fill:#444B5D;
 fill: #60BADF;
 stroke: #004D40;
 stroke-width: 0px;
}

svg line.link {
 cursor: move;
 cursor: -webkit-grab;
 stroke: #EFEDE7;
 stroke-linecap: round;
}

/* Provisional selection color for the selected cluster. */
svg line.link.clustersel {
 stroke: #DFDDE7;
}

svg line.join {
 stroke: #DBD8D3;
 stroke-width: 75px;
 stroke-linecap: round;
}

svg line.breaking {
 visibility: hidden;
}


/*shuffle button containers (for placement + sizing) */
#control_container {
  margin: auto;
  /*vertical-align: bottom;*/
  width: 100%;
  height: 80px;
  position: absolute;
  bottom: 0%;
  margin-left: 0 auto;
  text-align: center;
  margin-bottom: 3%;
  padding: 0px;
  border: 0px;
}

#button_container {
  display:inline-block;
  vertical-align: middle;
  height: 95%;
}

#group_size_container {
  display:inline-block;
  vertical-align: middle;
  height: 95%;
  width: 80px;
  border-radius: 5px;
  border: 3px solid #BCBAB4;
  font-size: 28px;
}

#increment_container {
  display: inline-block;
  width: 30px;
  height: 100%;
  vertical-align: middle;
}

#increase_button_container {
  display: block;
  height: 45%;
  padding-top: 10%;
  padding-bottom: 5%;
  vertical-align: top;
}

#decrease_button_container{
  display: block;
  height: 45%;
  padding-bottom: 10%;
  padding-top: 5%;
  vertical-align: bottom;
}

/*shuffle button objects (for colors + behavior) */
#shuffle_button {
  text-align: center;
  height: 100%;
  width: 200px;
  font: 28px Raleway;
  background-color: #4C5365;
  color: white;
  border-radius: 5px;
  border-width: 0px;
  pointer-events: all;
}


.control_button:focus, .control_button:active {
  box-shadow: 0 0 5px #f9efec;
  padding: 0px;
  margin: 0px;
  outline: none;
  color: #F39354;
  background: #FED587;
}

#shuffle_button:hover, .control_button:hover{
  background-color: #F39354;
  color: #F39354;
  background: #FED587;
}

.group_size_icon_container {
    width: 100%;
}

.group_size_icon {
    display: inline-block;
    vertical-align: middle;
    text-align: center;
    font-family: FontAwesome;
    font-size: 28px;
    color: #4C5365;
    white-space: normal;
    word-wrap: break-word;
    width:80%;
    height: 100%;
}

#group_size_icon_nx_number {
    display: inline-block;
    line-height: 100%;
    font-family: Raleway;
    font-size: 28px;
    color: #4C5365;
}

#group_size_icon_1x, #group_size_icon_2x{
    margin-top: 30%;
}

#group_size_icon_3x, #group_size_icon_4x{
    padding-top: 15%;
}

/*increments*/
.increment_button {
  display: block;
  font-family: FontAwesome;
  font-size: 20px;
  border-radius: 5px;
  background-color: #4C5365;
  border-width: 0px;
  border-color: white;
  pointer-events: all;
  text-align: center;
  width: 100%;
  height: 100%;
  color: white;
}

#increase_group_size:before {
  content: '\f067';
}

#decrease_group_size:before {
  content: '\f068';
}


/*
#group_size_input {
  -webkit-transition: all 0.10s ease-in-out;
  -moz-transition: all 0.10s ease-in-out;
  -ms-transition: all 0.10s ease-in-out;
  -o-transition: all 0.10s ease-in-out;
  font: 32px Raleway;
  font-weight: bold;
  width: 100%;
  text-align: center;
  padding: 0px;
  margin: 0px;
  border: 0px;
  height:100%;
  bottom: 0%;
  background-color: white;
  color: #4C5365;
  outline: none;
}
*/

